	7458,Fortune_Horn - it's a custom name yet
	12016,Speed_Increasing_Potion no bonus... Turbo Track race item
	12017,Speed_Decreasing_Potion no bonus... Turbo Track race item
	-----
	5136,Luise_Santa's_Hat: need view ID, temp: normal santa hat
	12131,Lucky_Potion: +15 LUK for 3 minutes
	12132,Red_Package: Turns you into x-mas clothes sprite for 10 minutes
	--
12/05
	* Fixed Meteor Storm (Was not requiring thunderstorm level 1) [Kayla]
12/04
	* Updated SL_SOULLINKER to have inf2 = 512 (cant' cast on self) [Skotlex]
12/02
	* Fixed Items according to Taekwon / Soul Linker / Star Gladiator [Lupus]
	* Changed the requirment of Vulture's Eye for Falcon Assault [MasterOfMuppets]
	  from 10 to 5, thanks to Haplo.
	* Fixed two typos in the mob_skill_db, thanks to Zubasa [MasterOfMuppets]
	* Casting time for soul link [Vicious]
	* Updated Marine Sphere skills in hopes to make it work correctly.
12/01
	* Changed TK_JUMPKICK's inf to self skill (to make it behave like extremity
	  fist) [Skotlex]
	* Set Ki Explosion's stun time as time2 in skill_cast_db. [Skotlex]
	* Lowered the MVP exp bonus from the bio lab dungeon bosses [MasterOfMuppets]
	- fixed a typo in Erend's exp
	* Corrected Venom Splasher's countdown duration. [Skotlex]
	* Implementation of Reddozen's Soul Linker's DB [Vicious]
11/30
	* Added the last drops of the Bio lab dungeon bosses [MasterOfMuppets]
	* Changed the attack range of Rafflesias to 7 [MasterOfMuppets]
	* Cleaned up the item_db, checked and added the items previously added and
	  commented by Viccious. [Skotlex]
	* Cleaned up the mob_db, corrected Lighthalzen Bosses MVP exp rate (the max
	  is 100%, why did you guys set 70000%? I changed that to 70%) [Skotlex]
	* Cleaned up job_db2.txt by removing the unnecessary trailing 0's. [Skotlex]
	* Fixed Antonio's defense (was 100, should be 99) [Kayla]
	* Fixed CTM card affecting after-cast delay instead of castrate [Vicious]